Update index.html to include CV page

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elif Kilic – Home</title>
+    <title>elif Kılıç – Home</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="site-header">
       <div class="container">
-        <h1 class="site-title">Elif Kilic</h1>
+        <h1 class="site-title">Elif Kılıç</h1>
         <nav class="site-nav">
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="cv.html">About elif</a><li>
             <li><a href="research.html">Research</a></li>
             <li><a href="climacoder.html">ClimaCoder</a></li>
             <li><a href="writing.html">Writing</a></li>
@@ -31,7 +32,7 @@
           <img src="assets/images/profile-placeholder.png" alt="Your photo" />
           <div class="bio">
             <p>
-              I am Elif Kilic, an atmospheric scientist and climate enthusiast based in
+              I am Elif Kılıç, an atmospheric scientist and climate enthusiast based in
               California. My research focuses on extreme heat, humidity and their impacts on
               vulnerable communities. Outside of academia I enjoy hiking and exploring new
               ways to communicate science through art and coding.
@@ -73,7 +74,7 @@
 
     <footer class="site-footer">
       <div class="container">
-        <p>&copy; <span id="year"></span> Elif Kilic. All rights reserved.</p>
+        <p>&copy; <span id="year"></span> Elif Kılıç. All rights reserved.</p>
       </div>
     </footer>
 
