Update index.html added a little spice

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>elif Kılıç – Home</title>
+    <title>elif kılıç – Home</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="site-header">
       <div class="container">
-        <h1 class="site-title">Elif Kılıç</h1>
+        <h1 class="site-title">elif kılıç</h1>
         <nav class="site-nav">
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
@@ -24,7 +24,7 @@
 
     <main class="container">
       <section id="about">
-        <h2>About Me</h2>
+        <h2>elif kılıç</h2>
         <div class="profile">
           <!-- Replace the placeholder image with your own photo.
                For example place a file named profile.jpg in the assets/images directory
@@ -32,16 +32,27 @@
           <img src="assets/images/profile-placeholder.png" alt="Your photo" />
           <div class="bio">
             <p>
-              I am Elif Kılıç, an atmospheric scientist and climate enthusiast based in
-              California. My research focuses on extreme heat, humidity and their impacts on
-              vulnerable communities. Outside of academia I enjoy hiking and exploring new
-              ways to communicate science through art and coding.
+              Hi! I’m Elif — a climate scientist, heat-stress detective, and unapologetic weather nerd 🌦️
+              based in sunny California. I spend my days figuring out how extreme heat and humidity happen,
+              why they’re getting worse, and how they affect the people most at risk. My work blends coding 💻,
+              climate models 📊, and a lot of late-night coffee ☕ to turn messy data into tools and stories
+              that can help protect communities.
             </p>
+            
             <p>
-              This website collects my work, collaborations and writing. Scroll through
-              the different pages to learn more about my research projects, our joint
-              climate blog <em>ClimaCoder</em>, and my writing on heat stress and
-              vulnerability across Central America and Mexico.
+              Outside the lab, you’re more likely to find me behind a trumpet 🎺 or euphonium 🎶 playing
+              Latin jazz, or on a dance floor 💃 moving through salsa, bachata, or zouk. If I’m not making
+              music, I’m probably on my bike 🚲 headed to a hardware store 🛠️ for yet another “quick” DIY
+              supply run — whether it’s for a home project 🔧, a new plant 🪴 for my ever-growing indoor jungle,
+              or my ongoing battle to outsmart the ants 🐜 that think they pay rent.
+            </p>
+            
+            <p>
+              This site is where it all comes together: my research projects from grad school and beyond,
+              collaborations with my boyfriend ❤️ over at <em>ClimaCoder</em> 🌍, and deep-dive writing ✍️ on
+              heat stress and vulnerability across Central America and Mexico. Whether you’re here for the
+              science 🔬, the maps 🗺️, the code 🧩, or just to peek into the day-to-day life of a climate
+              scientist who occasionally swaps climate data for clave rhythms — welcome! I’m glad you stopped by.
             </p>
           </div>
         </div>
