--- a/cv.html
+++ b/cv.html
@@ -47,7 +47,7 @@
   <main role="main">
     <h1>Elif Kılıç</h1>
     <p class="contact">
-      Oakland, CA 94609 · <a href="mailto:eli2ilic@berkeley.edu">eli2ilic@berkeley.edu</a> ·
+      Oakland, CA · <a href="mailto:eli2ilic@berkeley.edu">eli2ilic@berkeley.edu</a> ·
       <a href="https://www.linkedin.com/in/elifakilic" target="_blank" rel="noopener">linkedin.com/in/elifakilic</a>
     </p>
 
