--- a/cv.html
+++ b/cv.html
@@ -47,14 +47,14 @@
   <main role="main">
     <h1>Elif Kılıç</h1>
     <p class="contact">
-      Oakland, CA · <a href="mailto:eli2ilic@berkeley.edu">eli2ilic@berkeley.edu</a> ·
+      Oakland, CA · <a href="mailto:eli2ilic@berkeley.edu">elifkilic@berkeley.edu</a> ·
       <a href="https://www.linkedin.com/in/elifakilic" target="_blank" rel="noopener">linkedin.com/in/elifakilic</a>
     </p>
 
     <section class="cv-section">
       <h2>Education</h2>
       <div class="item">
-        <div class="role">M.S., Environmental Engineering, GPA 3.7/4.0</div>
+        <div class="role">M.S., Environmental Engineering</div>
         <div class="orgline"><span>University of California, Berkeley</span> · <span class="place">Berkeley, CA</span> · <span class="tag">May 2025</span></div>
       </div>
       <div class="item">
