--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Elif Kılıç — Climate Scientist</title>
+  <title>elif kılıç — Climate Scientist</title>
   <meta name="description" content="Elif Kılıç — climate scientist focused on extreme heat & humidity, Latin jazz trumpet & euphonium, DIY, plants, and science communication."/>
   <link rel="preload" as="image" href="assets/images/profile-placeholder.png">
   <link rel="stylesheet" href="style.css" />
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <a class="site-title" href="index.html">Elif Kılıç</a>
+        <a class="site-title" href="index.html">elif kılıç</a>
       </div>
       <nav class="site-nav" aria-label="Main">
         <a href="index.html" class="active">Home</a>
@@ -116,7 +116,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      © <span id="y"></span> Elif Kılıç · <a href="mailto:eli2ilic@berkeley.edu">eli2ilic@berkeley.edu</a>
+      © <span id="y"></span> Elif Kılıç · <a href="mailto:elifkilic@berkeley.edu">elifkilic@berkeley.edu</a>
     </div>
   </footer>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
