--- a/climacoder.html
+++ b/climacoder.html
@@ -24,6 +24,10 @@
     <main class="container">
       <h2>ClimaCoder</h2>
       <p>
+        <!-- Put this inside <body> where you want the glide to appear -->
+        <div class="quetzal-glide">
+          <img class="bird" src="/assets/quetzal.webp" alt="Quetzal" width="180" height="180" />
+        </div>
         <strong>ClimaCoder</strong> is a collaborative project between my partner and me.
         We use our combined expertise in climate science and software engineering to
         develop tools and analyses that improve our understanding of climate and
