--- a/climacoder.html
+++ b/climacoder.html
@@ -16,6 +16,7 @@
             <li><a href="research.html">Research</a></li>
             <li><a href="climacoder.html" class="active">ClimaCoder</a></li>
             <li><a href="writing.html">Writing</a></li>
+            <li><a href="demo.html">demo</a></li>
           </ul>
         </nav>
       </div>
