--- a/demo.html
+++ b/demo.html
@@ -125,14 +125,14 @@
 
   <!-- GLIDING -->
   <section class="quetzal-glide">
-    <img class="bird" src="/assets/quetzal.webp" alt="Quetzal" width="180" height="180" />
+    <img class="bird" src="/assets/quetzal_optimized.webp" alt="Quetzal" width="180" height="180" />
   </section>
 
   <!-- ORBIT -->
   <section class="orbit-section">
     <div class="orbit-wrap">
       <img class="globe" src="/assets/globe-logo.png" alt="Globe" width="240" height="240" />
-      <img class="quetzal" src="/assets/quetzal.webp" alt="Quetzal" width="120" height="120" />
+      <img class="quetzal" src="/assets/quetzal_optimized.webp" alt="Quetzal" width="120" height="120" />
     </div>
   </section>
 
