--- a/demo.html
+++ b/demo.html
@@ -131,7 +131,7 @@
   <!-- ORBIT -->
   <section class="orbit-section">
     <div class="orbit-wrap">
-      <img class="globe" src="/assets/globe-logo.png" alt="Globe" width="240" height="240" />
+      <img class="globe" src="/assets/globe_logo.png" alt="Globe" width="240" height="240" />
       <img class="quetzal" src="/assets/quetzal_optimized.webp" alt="Quetzal" width="120" height="120" />
     </div>
   </section>
